added button etc

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -12,11 +12,14 @@
 
 
 <div class="container">
+<h4>Team hedgehog: </h4>
+<h4 id="teamhedge"></h4>
+<h4 id="teamdoggo">Team doggo:</h4>
 
 <table class="animated bounceInLeft delay-1s">
   <tr>
-    <td id="one" class=" box border-top border-left"></td>
-    <td id="two" class=" box border-top"></td>
+    <td id="one" class="box border-top border-left"></td>
+    <td id="two" class="box border-top"></td>
     <td id="three" class="box three border-top border-right"></td>
   </tr>
   <tr>
@@ -33,6 +36,13 @@
 
 <h2 class="player1">Player one wins!!</h2>
 <h2 class="player2">Player two wins!!</h2>
+<h2 class="draw">Draw!</h2>
+
+
+
+<div id="button" class="container">
+  <a href="#">Reset</a>
+</div>
 <!-- \["one", "five", "seven", "three"]
 
 
