this is my ready page but I need to add some additional functionalities

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -8,15 +8,11 @@
   <script src="js/jquery.js"></script>
   <script src="js/tictactoe.js"></script>
 </head>
-<body>
+<body class="animated bounceInLeft delay-1s">
 
 
 <div class="container">
-<h4>Team hedgehog: </h4>
-<h4 id="teamhedge"></h4>
-<h4 id="teamdoggo">Team doggo:</h4>
-
-<table class="animated bounceInLeft delay-1s">
+<table>
   <tr>
     <td id="one" class="box border-top border-left"></td>
     <td id="two" class="box border-top"></td>
@@ -34,6 +30,7 @@
   </tr>
 </table>
 
+
 <h2 class="player1">Player one wins!!</h2>
 <h2 class="player2">Player two wins!!</h2>
 <h2 class="draw">Draw!</h2>
@@ -43,30 +40,18 @@
 <div id="button" class="container">
   <a href="#">Reset</a>
 </div>
-<!-- \["one", "five", "seven", "three"]
+</div>
 
+<div id="hedgehogposition">
+<h4>Team hedgehog: </h4>
+<h4 id="teamhedge"></h4>
+</div>
 
+<div id="dogposition">
+<h4> Team doggo: </h4>
+<h4 id="teamdoggo"></h4>
+</div>
 
-1&2&3
-||
-4&5&6
-||
-789
-147
-258
-369
-159
-357
-
-tictactoe.js:41 playerOneCombos (5) ["zero", "two", "eight", "four", "six"] -->
-
-
-
-<!-- <div class="img">
-<img id="image-one" src="https://media1.giphy.com/media/3xz2BCohVTd7h2Kvfi/200.webp?cid=790b76115d22c46545414a44552b6e55&rid=200.webp" alt="hedgehog">
-<img class="image-two" src="https://media0.giphy.com/media/23xN9cYQSKwFy/200w.webp?cid=790b76115d22c4df78505038595e6040&rid=200w.webp" alt="circle doggo">
-<img src="" alt="">
-</div> -->
 
 
 
@@ -88,7 +73,6 @@ tictactoe.js:41 playerOneCombos (5) ["zero", "two", "eight", "four", "six"] -->
 
 
 
-</div>
 
 <!-- <div id="content">
 
