--- a/tictactoe.html
+++ b/tictactoe.html
@@ -12,6 +12,9 @@
 
 
 <div class="container">
+
+  <h1>(just another)</h1>
+  <h1>Tic Tac Toe</h1>
 <table>
   <tr>
     <td id="one" class="box border-top border-left"></td>
@@ -38,7 +41,7 @@
 
 
 <div id="button" class="container">
-  <a href="#">Reset</a>
+  <a id="reset" href="#">Reset</a>
 </div>
 </div>
 
@@ -54,6 +57,16 @@
 
 
 
+<div id="myModal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div id="userpick">
+      <h2>Pick up Team Dog or Team Hedgehog</h2>
+    <button class="btns"> <img class="imgbuttons" src="https://media1.giphy.com/media/3xz2BCohVTd7h2Kvfi/200.webp?cid=790b76115d22c46545414a44552b6e55&rid=200.webp" alt="image1"> </button>
+    <button class="btns"> <img class="imgbuttons" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpspo-w1z4Mpro3XaphOs6Xs8NZKf9SyzPdGWBW2p-alr2ID5oKg" alt=""></button>
+     </div>
+  </div>
+</div>
 
 
 
