adding funny eyes

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -11,10 +11,8 @@
 <body class="animated bounceInLeft delay-1s">
 
 
-<div class="container">
 
-  <h1>(just another)</h1>
-  <h1>Tic Tac Toe</h1>
+<div class="container">
 <table>
   <tr>
     <td id="one" class="box border-top border-left"></td>
@@ -41,7 +39,7 @@
 
 
 <div id="button" class="container">
-  <a id="reset" href="#">Reset</a>
+  <a href="#">Reset</a>
 </div>
 </div>
 
@@ -57,17 +55,13 @@
 
 
 
-<div id="myModal" class="modal">
-  <!-- Modal content -->
-  <div class="modal-content">
-    <div id="userpick">
-      <h2>Pick up Team Dog or Team Hedgehog</h2>
-    <button class="btns"> <img class="imgbuttons" src="https://media1.giphy.com/media/3xz2BCohVTd7h2Kvfi/200.webp?cid=790b76115d22c46545414a44552b6e55&rid=200.webp" alt="image1"> </button>
-    <button class="btns"> <img class="imgbuttons" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpspo-w1z4Mpro3XaphOs6Xs8NZKf9SyzPdGWBW2p-alr2ID5oKg" alt=""></button>
-     </div>
+<div class="move-area">
+  <div class='.face1'>
+    <div class='eye'></div>
+    <div class='eye'></div>
+    <div class='mouth'></div>
   </div>
 </div>
-
 
 
 <!-- <div class="left animated bounceInLeft delay-3s"> <div/>
@@ -88,12 +82,10 @@
 
 
 <!-- <div id="content">
-
     <div id="nav">
       <div id="logo"><img src="img/ga.png" alt="Bank of GA"/></div>
       <div id="title">Bank of GA</div>
     </div>
-
     <div class="account" id="checking">
       <h1>Checking</h1>
       <div class="balance" id="checking-balance">$0</div>
@@ -101,7 +93,6 @@
       <input id="checking-deposit" type="button" value="Deposit" />
       <input id="checking-withdraw" type="button" value="Withdraw" />
     </div>
-
     <div class="account" id="savings">
       <h1>Savings</h1>
       <div class="balance" id="savings-balance">$0</div>
@@ -109,9 +100,7 @@
       <input id="savings-deposit" type="button" value="Deposit" />
       <input id="savings-withdraw" type="button" value="Withdraw" />
     </div>
-
     <div class="clear"></div>
-
   </div>  -->
 
 </body>
