added a face with moving eyes

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -13,6 +13,7 @@
 
 
 <div class="container">
+  <h1>Tic Tac Toe </h1>
 <table>
   <tr>
     <td id="one" class="box border-top border-left"></td>
@@ -31,37 +32,44 @@
   </tr>
 </table>
 
+<div>
+<h2 class="text player2 animated pulse infinite">Player two wins!</h2>
+</div>
 
-<h2 class="player1">Player one wins!!</h2>
-<h2 class="player2">Player two wins!!</h2>
-<h2 class="draw">Draw!</h2>
-
+<div>
+<h2 class="text player1 animated pulse infinite">Player one wins!!</h2>
+</div>
+<!-- <h2 class="player2">Player two wins!!</h2> -->
+<div>
+<h2 class="text draw">Draw!</h2>
+</div>
 
 
 <div id="button" class="container">
-  <a href="#">Reset</a>
+  <a href="#">Play again</a>
 </div>
 </div>
 
 <div id="hedgehogposition">
-<h4>Team hedgehog: </h4>
+<h4>Player 1: </h4>
 <h4 id="teamhedge"></h4>
 </div>
 
 <div id="dogposition">
-<h4> Team doggo: </h4>
+<h4> Player 2: </h4>
 <h4 id="teamdoggo"></h4>
 </div>
 
 
 
 <div class="move-area">
-  <div class='.face1'>
+  <!-- <div class='.face1'> -->
     <div class='eye'></div>
     <div class='eye'></div>
     <div class='mouth'></div>
-  </div>
-</div>
+    </div>
+  <!-- </div> -->
+
 
 
 <!-- <div class="left animated bounceInLeft delay-3s"> <div/>
