before adding bubbles

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -62,12 +62,12 @@
 
 
 
-<div class="move-area">
+<!-- <div class="move-area">
   <!-- <div class='.face1'> -->
-    <div class='eye'></div>
+    <!-- <div class='eye'></div>
     <div class='eye'></div>
     <div class='mouth'></div>
-    </div>
+    </div> --> 
   <!-- </div> -->
 
 
