--- a/tictactoe.html
+++ b/tictactoe.html
@@ -13,7 +13,17 @@
 
 
 <div class="container">
-  <h1>Tic Tac Toe </h1>
+
+  <div class="center-outer">
+  <div class="center-inner">
+
+  <div class="bubbles">
+  <h1>Tic Tac Toe</h1>
+  </div>
+
+  </div>
+  </div>
+
 <table>
   <tr>
     <td id="one" class="box border-top border-left"></td>
@@ -67,7 +77,7 @@
     <!-- <div class='eye'></div>
     <div class='eye'></div>
     <div class='mouth'></div>
-    </div> --> 
+    </div> -->
   <!-- </div> -->
 
 
