--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body class="animated bounceInLeft">
 
+  <!-- <button id="btn" type="button">Click here for sound</button> -->
+  	<audio id="audio" src="bleep.mp3"></audio>
+    <audio id="audio1" src="cartoon.mp3"></audio>
+    <audio id="audio2" src="blip.mp3"></audio>
+
 <div class="container">
   <div class="center-outer">
   <div class="center-inner">
