--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 <!-- If player one wins, or player two wins, or there is a draw, show this ->  -->
 
 <div>
-<h2 class="text player2 animated pulse infinite">Player two wins!</h2>
+<h2 class="text player2 animated pulse">Player two wins!</h2>
 </div>
 
 <div>
-<h2 class="text player1 animated pulse infinite">Player one wins!!</h2>
+<h2 class="text player1 animated pulse">Player one wins!!</h2>
 </div>
 <!-- <h2 class="player2">Player two wins!!</h2> -->
 <div>
-<h2 class="text draw animated heartbeat infinite">Draw!</h2>
+<h2 class="text draw animated heartbeat">Draw!</h2>
 </div>
 
 
