--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <!-- <button id="btn" type="button">Click here for sound</button> -->
   	<audio id="audio" src="bleep.mp3"></audio>
     <audio id="audio1" src="cartoon.mp3"></audio>
-    <audio id="audio2" src="blip.mp3"></audio>
+    <audio id="audio2" src="blip1.mp3"></audio>
+      <audio id="audio3" src="win.mp3"></audio>
 
 <div class="container">
   <div class="center-outer">
