final version with music at the start

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <audio id="audio1" src="cartoon.mp3"></audio>
     <audio id="audio2" src="blip1.mp3"></audio>
       <audio id="audio3" src="win.mp3"></audio>
+      <audio id="audio0" src="start.mp3"></audio>
 
 <div class="container">
   <div class="center-outer">
